2008-02-13  Corinna Vinschen  <corinna@vinschen.de>

	* cygtls.cc (_cygtls::init_exception_handler): Revert patch
	from 2005-12-02.
	* exceptions.cc (stack_info::walk): Add workaround for NT 5.2
	64 bit OSes.
	* wincap.h (wincaps::has_restricted_stack_args): New element.
	* wincap.cc: Implement above element throughout.
	(wincapc::init): Reset has_restricted_stack_args if not running
	under WOW64.

2008-01-24  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (fs_info::update): Fix Samba test to support recent as well
	as upcoming Samba releases.

2008-01-15  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in (install-libs): Overwrite newlib's libg.a with symlink
	to libcygwin.a.

2007-12-14  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/socket.h: Include sys/uio.h instead of cygwin/uio.h.
	* include/cygwin/uio.h: Remove.

2007-12-14  Corinna Vinschen  <corinna@vinschen.de>

	* dtable.cc (dtable::set_file_pointers_for_exec): Reenable.  Fix
	comment.
	* spawn.cc (spawn_guts): Call cygheap->fdtab.set_file_pointers_for_exec
	only for non-Cygwin processes.

2007-12-13  Craig MacGregor  <cmacgreg@gmail.com>
	    Corinna Vinschen  <corinna@vinschen.de>

	* poll.cc (poll): Return count of fds with events instead of total
	event count.

2007-12-11  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (fhandler_base::fstat_helper): Fix R/O bit
	handling on filesystems without ACL support.

2007-12-11  Corinna Vinschen  <corinna@vinschen.de>

	* localtime.cc (tzset): Guard by a muto for thread safety.

2007-12-11  Dave Korn  <dave.korn@artimi.com>

	* cygheap.cc (_csbrk):  Don't request zero bytes from VirtualAlloc,
	as windows treats that as an invalid parameter and returns an error.

2007-12-11  Corinna Vinschen  <corinna@vinschen.de>

	* localtime.cc (tzset): Call tzsetwall only if it hasn't been
	called before.

2007-12-01  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/time.h (daylight): Declare as extern symbol referring